Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.4.4 (in development)
- Update samples to be compatible with CSP (Content Security Policy).
  (except Asset Management, Account Manager and JS Components Sample)
- Update sample_schema_mysql.txt to merge schema_data.txt of Sample_Extensible Sample.
- [BUG FIX] Fix compatibility when using INTERMediator.additionalCondition or INTERMediator.additionalSortKey.
  The affected version is 4.3 only (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix an error when the value of 'operator' is 'or' or 'and' in addtionalCondition with FileMaker Server.
  The affected versions are 3.11, 4.0, 4.1, 4.2 and 4.3 (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix not to show the error message (message id: 1024) when updating data using Safari (version 4.3 only).
- [BUG FIX] Fix an error in "Master-Detail Style Page" Sample for PostgreSQL (version 4.3 only).
- [BUG FIX] Avoid outputting error messages in an error log file when not specifying the 'context' key of the 
  'file-upload' key in a definition file.

Ver.4.3 (2014/4/7)
- The Local Context is supported. You can bind the context named "_" at any place in a page file.
  The method IMLibLocalContext.getValue/setValue can be used for getting/setting the value.
- Validation doesn't call the eval function, but it changes to evaluate the expression to validate.
- The 'validation' in a context can set the 'notify' parameter. Its value can be 'alert', 'inline' and 'end-of-sibling'.
- The DataConverter_NullZeroString class added. This is for numeric field that the blank is treated as NULL.
- TinyMCE Ver.4.0.19 supported.
- "new Function()" statements have gone away. Moreover no eval function so far.
- The length function which returns the length of string added to the expression.
- The new area named "Practices" in the "Samples" directory is added.